<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_add_challenge"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etChallenge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:hint="@string/hint_write_challenge"
        android:importantForAutofill="no"
        android:inputType="textCapSentences" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/orange"
            android:text="@string/action_cancel"
            android:textColor="@android:color/white"
            app:cornerRadius="9dp" />

        <Button
            android:id="@+id/btnSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/orange"
            android:enabled="false"
            android:text="@string/action_save"
            android:textColor="@android:color/white"
            app:cornerRadius="9dp" />

    </LinearLayout>

</LinearLayout>